<resources>
    <string name="app_name">Cryptoculator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_card">NewCardActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="add_new_card">HOW TO ADD NEW CARD</string>
    <string name="conversion">CONVERSION</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_title_home">Home</string>
    <string name="nav_title_about">About</string>
    <string name="nav_title_help">Help</string>

    <string name="convert">CONVERT</string>
    <string name="app_title">Cryptoculator\nby\nNenneAdora</string>
    <string name="app_description">This application shows the latest exchange rate between cryptocurrencies (BTC and ETH)
        and 20 major world currencies. \n\n The 20 world currencies include: \n Australian Dollar, Canadian Dollar, Chinese offshore Yuan, Danish Krone,
        Euro, British Pound, Hong Kong Dollar, Japanese yen, Mexican Peso, New Zealand Dollar, Nigerian Naira, Polish Zloty, Russian Ruble, Singapore Dollar,
        South African Rand, Swedish Krona, Swiss franc, Turkish Lira, United States Dollar.

    </string>

    <string name="createCardToGetStarted">You haven\'t created any cards. Create cards to start converting. Hit the \'+\' button to create a new card. \n\n
    Explore the Twenty Currencies available!
    </string>
    <string name="title_activity_conversion">ConversionActivity</string>

    <string name="new_card_desc">Step 1: Click on the \"+\" button on the home screen\nStep 2: You will be redirected to a New Card activity. This activity has two tabs (BTC and ETH).\nStep 3: Click on any currency card to create either a BTC or ETH equivalent on the homepage. \nStep 4: Once you see an alert \"New Card Added\", a new card has been created.\nStep 5: Return to your home page, and you will see your new card.

    </string>
    <string name="conversion_desc">Step 1: Click on the card you created on the homepage.\nStep 2:You will be redirected to a conversion screen. \nStep 3: Enter the amount you want to convert and you will get the result.

    </string>

</resources>
