<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/help_linear_layout_height"
            android:background="@color/lightGray"
            android:padding="@dimen/activity_horizontal_margin"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_new_card"
                android:textStyle="bold"
                android:textColor="@android:color/black"

                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_card_desc"
            android:padding="@dimen/activity_horizontal_margin"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/help_linear_layout_height"
            android:background="@color/lightGray"
            android:padding="@dimen/activity_horizontal_margin"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/conversion"
                android:textStyle="bold"
                android:textColor="@android:color/black"

                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conversion_desc"
            android:padding="@dimen/activity_horizontal_margin"
            />

    </LinearLayout>
</ScrollView>